--- a/experience/index.html
+++ b/experience/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
 
-    <title>Experience | Portfolio Jigar Sable</title>
+    <title>Experience | Portfolio Himanshu Malviya </title>
 </head>
 <body oncontextmenu="return false">
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Jigar</a>
+        <a href="/" class="logo"><i class="fab fa-node-js"></i> Himanshu Malviya</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -42,26 +42,15 @@
 
   <div class="timeline">
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
 
     <div class="container right">
         <div class="content">
           <div class="tag">
-            <h2>DevIncept (Top Contributor)</h2>
+            <h2>Rocket.Chat (Top Contributor)</h2>
           </div>
           <div class="desc">
-              <h3>DCP 2021 Contributor | Open Source Program</h3>
-              <p>July 2021 - October 2021</p>
+              <h3>Contributor | Open Source Project</h3>
+              <p>Jan 2022 - April 2022</p>
           </div>
         </div>
       </div>
@@ -69,11 +58,11 @@
       <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>LetsGrowMore Summer of Code</h2>
+            <h2>Processing Foundation</h2>
           </div>
           <div class="desc">
-              <h3>LGM-SOC'21 Participant | Open Source Program</h3>
-              <p>June 2021 - August 2021</p>
+              <h3>Contributor | Open Source Project</h3>
+              <p>Jan 2022 - March 2022</p>
           </div>
         </div>
       </div>
@@ -81,11 +70,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Girlsript Summer of Code</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Contributor | Open Source Program</h3>
+            <p>March 2022 - May 2022</p>
         </div>
       </div>
     </div>
@@ -93,59 +82,24 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>The Spark Foundation</h2>
+          <h2>Girlscript Winter of Contributing</h2>
         </div>
         <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+            <h3>Contributor | Open Source Program</h3>
+            <p>Oct 2021 - Dec 2021</p>
         </div>
       </div>
     </div>
+
 
     <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Frshr Technologies</h2>
-        </div>
-        <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
         <div class="content">
           <div class="tag">
-            <h2>Hacktoberfest 2020</h2>
+            <h2>Hacktoberfest 2021</h2>
           </div>
           <div class="desc">
               <h3>Contributor | Open Source Program</h3>
-              <p>October 2020 - November 2020</p>
+              <p>October 2021 - November 2021s</p>
           </div>
         </div>
       </div>
@@ -169,8 +123,8 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
-          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
+          <h3>Himanshu Malviya's Portfolio</h3>
+          <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> </p>
       </div>
 
       <div class="box">
@@ -185,21 +139,20 @@
 
       <div class="box">
           <h3>contact info</h3>
-          <p> <i class="fas fa-phone"></i>+91 704-302-4736</p>
-          <p> <i class="fas fa-envelope"></i>jigarsable21@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Pune, India-412206</p>
+          <p> <i class="fas fa-phone"></i>+91 9098004605</p>
+          <p> <i class="fas fa-envelope"></i>himanshumalviya100@gmail.com</p>
+          <p> <i class="fas fa-map-marked-alt"></i>Indore, India</p>
           <div class="share">
 
-            <a href="https://www.linkedin.com/in/jigar-sable" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/jigar-sable" class="fab fa-github" target="_blank"></a>
-            <a href="mailto:jigarsable21@gmail.com" class="fas fa-envelope" target="_blank"></a>
-            <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" target="_blank"></a>
-            <a href="https://t.me/lifecode5" class="fab fa-telegram-plane" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/himanshumalviya1512/" class="fab fa-linkedin" target="_blank"></a>
+            <a href="https://github.com/Himanshu664" class="fab fa-github" target="_blank"></a>
+            <a href="mailto:Himanshu Malviya21@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="https://twitter.com/Himanshustwt" class="fab fa-twitter" target="_blank"></a>
           </div>
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable"> jigar sable</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/himanshumalviya1512/"> Himanshu Malviya </a></h1>
 
 </section>
 <!-- footer section ends -->
