Corrected/updated links and resume

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
+    <!-- /Favicon -->
+    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon-96x96.png" type="image/x-png">
     <title>Portfolio | Himanshu Malviya </title>
 </head>
 <body oncontextmenu="return false">
@@ -54,7 +54,7 @@
     <div class="socials">
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/himanshumalviya1512/" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/Himanshu664" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="https://github.com/himanshumalviya1512" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Himanshustwt" target="_blank"><i class="fab fa-twitter"></i></a></li>
         </ul>
       </div>
@@ -95,7 +95,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="./assets/resume/Himanshu+Malviya+Resume.pdf" download class="btn"><span>Resume</span>
+            <a href="./assets/resume/Himanshu Malviya Resume.pdf" download class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -194,64 +194,62 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Rocket.Chat (Top Contributor)</h2>
+          <h2>Ever.co LTD</h2>
         </div>
         <div class="desc">
-            <h3>Contributor | Open Source Project</h3>
-            <p>Jan 2022 - April 2022</p>
+            <h3>Full Stack Software developer </h3>
+            <p>Oct 2022 - Dec 2022</p>
         </div>
       </div>
     </div>
 
     <div class="container left">
+        <div class="content">
+          <div class="tag">
+            <h2>Rocket.Chat (Top Contributor)</h2>
+          </div>
+          <div class="desc">
+              <h3>Contributor | Open Source Project</h3>
+              <p>Jan 2022 - April 2022</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>Processing Foundation</h2>
+          </div>
+          <div class="desc">
+              <h3>Contributor | Open Source Project</h3>
+              <p>Jan 2022 - March 2022</p>
+          </div>
+        </div>
+      </div>
+
+    <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Processing Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Contributor | Open Source Project</h3>
-            <p>Jan 2022 - March 2022</p>
-        </div>
-      </div>
-    </div>
-
-  <div class="container right">
-    <div class="content">
-      <div class="tag">
-        <h2>Girlsript Summer of Code</h2>
-      </div>
-      <div class="desc">
-          <h3>Contributor | Open Source Program</h3>
-          <p>March 2022 - May 2022</p>
-      </div>
-    </div>
-  </div>
-
-  <div class="container left">
-    <div class="content">
-      <div class="tag">
-        <h2>Girlscript Winter of Contributing</h2>
-      </div>
-      <div class="desc">
-          <h3>Contributor | Open Source Program</h3>
-          <p>Oct 2021 - Dec 2021</p>
-      </div>
-    </div>
-  </div>
-
-
-  <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Hacktoberfest 2021</h2>
+          <h2>Girlsript Summer of Code</h2>
         </div>
         <div class="desc">
             <h3>Contributor | Open Source Program</h3>
-            <p>October 2021 - November 2021s</p>
+            <p>March 2022 - May 2022</p>
         </div>
       </div>
     </div>
-  </div>
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Girlscript Winter of Contributing</h2>
+        </div>
+        <div class="desc">
+            <h3>Contributor | Open Source Program</h3>
+            <p>Oct 2021 - Dec 2021</p>
+        </div>
+      </div>
+    </div>
 
   <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
