--- a/experience/index.html
+++ b/experience/index.html
@@ -42,8 +42,19 @@
 
   <div class="timeline">
 
-
     <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Ever.co LTD</h2>
+        </div>
+        <div class="desc">
+            <h3>Full Stack Software developer</h3>
+            <p>Oct 2022 - Dec 2022</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container left">
         <div class="content">
           <div class="tag">
             <h2>Rocket.Chat (Top Contributor)</h2>
@@ -55,7 +66,7 @@
         </div>
       </div>
 
-      <div class="container left">
+      <div class="container right">
         <div class="content">
           <div class="tag">
             <h2>Processing Foundation</h2>
@@ -67,7 +78,7 @@
         </div>
       </div>
 
-    <div class="container right">
+    <div class="container left">
       <div class="content">
         <div class="tag">
           <h2>Girlsript Summer of Code</h2>
@@ -79,7 +90,7 @@
       </div>
     </div>
 
-    <div class="container left">
+    <div class="container right">
       <div class="content">
         <div class="tag">
           <h2>Girlscript Winter of Contributing</h2>
@@ -90,19 +101,6 @@
         </div>
       </div>
     </div>
-
-
-    <div class="container right">
-        <div class="content">
-          <div class="tag">
-            <h2>Hacktoberfest 2021</h2>
-          </div>
-          <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>October 2021 - November 2021s</p>
-          </div>
-        </div>
-      </div>
 
   </div>
 
