--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
         <h3>I'm Himanshu Malviya</h3>
         <span class="tag">Full Stack Developer</span>
         
-        <p>I am a Full-Stack developer based in Indore, India. 
-          I am an Electronics and Telecommunication student from SGSITS Indore.
-          I am very passionate about improving my coding skills & developing applications & websites.
-          I build WebApps and Websites using MERN Stack.
-          Working for myself to improve my skills.
+        <p>I am a Full-Stack developer based in Indore, India, with a strong passion for coding and developing applications and websites.I have honed my skills in MERN Stack and have built numerous WebApps and Websites. I am highly self-motivated and continually work to improve my coding abilities to deliver the best possible results for clients. Currently, I am working independently, dedicating myself to enhancing my expertise in Full-Stack development.
          </p>
         
         <div class="box-container">
@@ -198,6 +194,14 @@
         </div>
         <div class="desc">
             <h3>Full Stack Software developer </h3>
+            <p>Spearheaded frontend development for 4 Ever.co repositories, delivered 58 pull requests, increased code quality
+              by 40% and reduced bug reports by 25%.Addressed issues related to UI, making sites responsive, and ensuring that 3 websites are production-ready.
+
+               Implemented new pages as per Figma designs, ensuring consistency and accessibility in both light and dark
+              modes for the Gauzy Timer website.
+
+               Tech Stack: Javascript, React, Next.js, TypeScript, Saas, Tailwind CSS, Chakra UI
+              </p>
             <p>Oct 2022 - Dec 2022</p>
         </div>
       </div>
@@ -210,6 +214,11 @@
           </div>
           <div class="desc">
               <h3>Contributor | Open Source Project</h3>
+              <p>Worked on the main repository and created 25 issues, resulting in 25 Pull Requests (PRs).
+                Improved the user interface (UI) experience by 5%, which included enhancing toast messages, hover effects, and
+                tooltips.Achieved a top-two ranking among 137 contributors to the Rocket.chat open-source project.
+                Tech Stack: React, Javascript
+                </p>
               <p>Jan 2022 - April 2022</p>
           </div>
         </div>
