Corrected Links and Updatd logos

--- a/404.html
+++ b/404.html
@@ -108,7 +108,7 @@
               target="_blank"
             ></a>
             <a
-              href="https://github.com/Himanshu664"
+              href="https://github.com/himanshu-malviya15
               class="fab fa-github"
               target="_blank"
             ></a>
