--- a/experience/index.html
+++ b/experience/index.html
@@ -143,7 +143,7 @@
           <div class="share">
 
             <a href="https://www.linkedin.com/in/himanshumalviya1512/" class="fab fa-linkedin" target="_blank"></a>
-            <a href="https://github.com/Himanshu664" class="fab fa-github" target="_blank"></a>
+            <a href="https://github.com/himanshu-malviya15 class="fab fa-github" target="_blank"></a>
             <a href="mailto:Himanshu Malviya21@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://twitter.com/Himanshustwt" class="fab fa-twitter" target="_blank"></a>
           </div>
