Corrected Experience Section

--- a/index.html
+++ b/index.html
@@ -267,20 +267,23 @@
           <div class="content">
             <div class="tag">
               <h2>Ever.co LTD</h2>
-            </div>
-            <div class="desc">
-              <h3>Full Stack Software developer</h3>
-              <p>
-                Spearheaded frontend development for 4 Ever.co repositories,
-                delivered 58 pull requests, increased code quality by 40% and
-                reduced bug reports by 25%.Addressed issues related to UI,
-                making sites responsive, and ensuring that 3 websites are
-                production-ready. Implemented new pages as per Figma designs,
-                ensuring consistency and accessibility in both light and dark
-                modes for the Gauzy Timer website. Tech Stack: Javascript,
-                React, Next.js, TypeScript, Saas, Tailwind CSS, Chakra UI
-              </p>
-              <p>Oct 2022 - Dec 2022</p>
+              <div class="desc">
+                <h3>Full Stack Software developer</h3>
+                <p>Oct 2022 - Dec 2022</p>
+                <ul class="desc">
+                  <li>Spearheaded frontend development for 4 Ever.co repositories,
+                    delivered 58 pull requests, increased code quality by 40% and
+                    reduced bug reports by 25%.</li>
+                    <li> Addressed issues related to UI,
+                      making sites responsive, and ensuring that 3 websites are
+                      production-ready. </li>
+                      <li>Implemented new pages as per Figma designs,
+                        ensuring consistency and accessibility in both light and dark
+                        modes for the Gauzy Timer website.</li>
+                        <li>Tech Stack: Javascript,
+                          React, Next.js, TypeScript, Saas, Tailwind CSS, Chakra UI</li>
+                        </ul>                
+                      </div>
             </div>
           </div>
         </div>
@@ -289,19 +292,22 @@
           <div class="content">
             <div class="tag">
               <h2>Rocket.Chat (Top Contributor)</h2>
-            </div>
-            <div class="desc">
-              <h3>Contributor | Open Source Project</h3>
-              <p>
-                Worked on the main repository and created 25 issues, resulting
-                in 25 Pull Requests (PRs). Improved the user interface (UI)
-                experience by 5%, which included enhancing toast messages, hover
-                effects, and tooltips.Achieved a top-two ranking among 137
-                contributors to the Rocket.chat open-source project. Tech Stack:
-                React, Javascript
-              </p>
-              <p>Jan 2022 - April 2022</p>
-            </div>
+              <div class="desc">
+                <h3>Contributor | Open Source Project</h3>
+                <p>Jan 2022 - April 2022</p>
+                <ul class="desc">
+                  <li> Worked on the main repository and created 25 issues, resulting
+                    in 25 Pull Requests (PRs).</li>
+                    <li> Improved the user interface (UI)
+                      experience by 5%, which included enhancing toast messages, hover
+                      effects, and tooltips.</li>
+                      <li>Achieved a top-two ranking among 137
+                        contributors to the Rocket.chat open-source project. </li>
+                        <li>Tech Stack: Javascript,
+                          React, TypeScript, CSS, MeteorJs</li>
+                        </ul> 
+                      </div>
+                    </div>
           </div>
         </div>
 
@@ -309,10 +315,15 @@
           <div class="content">
             <div class="tag">
               <h2>Processing Foundation</h2>
-            </div>
-            <div class="desc">
-              <h3>Contributor | Open Source Project</h3>
-              <p>Jan 2022 - March 2022</p>
+              <div class="desc">
+                <h3>Contributor | Open Source Project</h3>
+                <p>Jan 2022 - March 2022</p>
+              </div>
+              <ul class="desc">
+                <li>Collaborated with the P5.js community and website maintainers to enhance the functionality,user experience, and documentation of the website. </li>
+                <li>Submitted 4 pull requests (PRs) based on the identified issues, actively contributing for resolution of bugs.</li>
+                <li>Tech Stack: HTML, Javascript, MarkDown</li>
+              </ul>
             </div>
           </div>
         </div>
@@ -329,17 +340,6 @@
           </div>
         </div>
 
-        <div class="container right">
-          <div class="content">
-            <div class="tag">
-              <h2>Girlscript Winter of Contributing</h2>
-            </div>
-            <div class="desc">
-              <h3>Contributor | Open Source Program</h3>
-              <p>Oct 2021 - Dec 2021</p>
-            </div>
-          </div>
-        </div>
 
         <div class="morebtn">
           <a href="/experience" class="btn"
