--- a/experience/index.html
+++ b/experience/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link id='favicon' rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-png">
+    <link id='favicon' rel="shortcut icon" href="/assets/images/Profile.jpg" type="image/x-png">
 
     <title>Experience | Portfolio Himanshu Malviya </title>
 </head>
@@ -144,7 +144,7 @@
 
             <a href="https://www.linkedin.com/in/himanshumalviya1512/" class="fab fa-linkedin" target="_blank"></a>
             <a href="https://github.com/himanshu-malviya15 class="fab fa-github" target="_blank"></a>
-            <a href="mailto:Himanshu Malviya21@gmail.com" class="fas fa-envelope" target="_blank"></a>
+            <a href="mailto:himanshumalviya100@gmail.com" class="fas fa-envelope" target="_blank"></a>
             <a href="https://twitter.com/Himanshustwt" class="fab fa-twitter" target="_blank"></a>
           </div>
       </div>
