Fixed all the experience sections issues

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             I am a Full-Stack developer based in Indore, India, with a strong
             passion for coding and developing applications and websites. I have
             honed my skills in the MERN Stack and have built numerous WebApps
-            and websites. With my experience working at BigCircle, Ever Co. LTD,
+            and websites. With my experience working at Nirmata Technologies PVT LTD, BigCircle, Ever Co. LTD,
             Rocket.chat, Processing Foundation, and GirlScript Foundation, I
             have gained valuable expertise in software development. I thrive in
             dynamic and fast-paced startup environments. In addition to my
@@ -218,7 +218,7 @@
               Shri Govindram Seksaria Institute of Technology and Science,
               Indore, Madhya Pradesh, India SGSITS Indore
             </p>
-            <h4>2020-2024 | Pursuing</h4>
+            <h4>2020-2024</h4>
           </div>
         </div>
       </div>
@@ -263,6 +263,45 @@
       <h2 class="heading"><i class="fas fa-briefcase"></i> Experience</h2>
 
       <div class="timeline">
+        <div class="container right">
+          <div class="content">
+            <div class="tag">
+              <h2>Nirmata Technologies PVT LTD</h2>
+              <div class="desc">
+                <h3>Frontend Engineer</h3>
+                <p>Mar 2024 - Present</p>
+                <ul class="desc">
+                  <li>Initiated 200+ Pull Requests (PRs) and resolved 200+ Jira tickets for the Nirmata webclient repository</li>
+                    <li> Addressed issues related to UI,
+                      making sites responsive, and ensuring that 3 websites are
+                      production-ready.</li>
+                      <li>Independently worked on four major UI features and collaborated with cross-functional diverse teams</li>
+                      <li>Performed extensive API data stitching and integrated Recoil into a large codebase to persist the states of filters</li>
+                        <li>Tech Stack: Javascript, ReactJS, TypeScript, Ant Design, Styled Components, Redux, Recoil.</li>
+                        </ul>                
+                      </div>
+            </div>
+          </div>
+        </div>
+        <div class="container left">
+          <div class="content">
+            <div class="tag">
+              <h2>BigCircle</h2>
+              <div class="desc">
+                <h3>Software developer</h3>
+                <p>Dec 2023 - Feb 2024</p>
+                <ul class="desc">
+                  <li>Developed 50+ pull requests with 30+ Next.js components and TypeScript interfaces, optimizing data fetching with
+                    GraphQL from Strapi.</li>
+                    <li> Designed dynamic functionalities including carousels, sliders, and filtering options for enhanced user interaction.</li>
+                      <li>Ensured full responsiveness across devices and boosted website performance by 25%.</li>
+                      <li>Implemented algorithms to identify and display the top 5 similar companies, ensuring an engaging user experience.</li>
+                        <li>Tech Stack: Javascript, ReactJS, NextJS, TypeScript, Tailwind, Shadcn, GraphQL, Strapi</li>
+                        </ul>                
+                      </div>
+            </div>
+          </div>
+        </div>
         <div class="container right">
           <div class="content">
             <div class="tag">
